--- a/Finished/index.html
+++ b/Finished/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Monster Slayer</title>
-    <script src="js/vue.js"></script>
+    <script src="https://npmcdn.com/vue/dist/vue.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
@@ -12,10 +12,10 @@
         <div class="small-6 columns">
             <h1 class="text-center">YOU</h1>
             <div class="healthbar">
-                <div 
-                    class="healthbar text-center"
-                    style="background-color: green; margin: 0; color: white;" 
-                    :style="{width: playerHealth + '%'}">
+                <div
+                        class="healthbar text-center"
+                        style="background-color: green; margin: 0; color: white;"
+                        :style="{width: playerHealth + '%'}">
                     {{ playerHealth }}
                 </div>
             </div>
@@ -23,11 +23,11 @@
         <div class="small-6 columns">
             <h1 class="text-center">MONSTER</h1>
             <div class="healthbar">
-                <div 
-                class="healthbar text-center" 
-                style="background-color: green; margin: 0; color: white;"
-                :style="{width: monsterHealth + '%'}">
-                {{ monsterHealth }}
+                <div
+                        class="healthbar text-center"
+                        style="background-color: green; margin: 0; color: white;"
+                        :style="{width: monsterHealth + '%'}">
+                    {{ monsterHealth }}
                 </div>
             </div>
         </div>
@@ -45,16 +45,17 @@
             <button id="give-up" @click="giveUp">GIVE UP</button>
         </div>
     </section>
-    <section class="row log">
+    <section class="row log" v-if="turns.length > 0">
         <div class="small-12 columns">
             <ul>
-                <li>
-
+                <li v-for="turn in turns"
+                    :class="{'player-turn': turn.isPlayer, 'monster-turn': !turn.isPlayer}">
+                    {{ turn.text }}
                 </li>
             </ul>
         </div>
     </section>
 </div>
-<script src="js/app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
